--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,9 @@ body{
 body, a:link, a:visited, a:active{
   color: lightblue;
 }
+.infos{
+  display:none;
+}
 .title, .button {
   padding:5px 12px;
   float:right;
@@ -21,9 +24,15 @@ body, a:link, a:visited, a:active{
 .title{
   background-color: #777;
 }
+.aquarium {
+ position:absolute;
+ top:32px;
+  bottom:200px;
+  right:200px;
+left:0px;
+}
+
 .dancer{
-  border:10px solid red;
-  border-radius:10px;
   position:absolute;
 }
 #dancers {
@@ -147,3 +156,158 @@ body, a:link, a:visited, a:active{
   animation-delay: 1s;
   animation-timing-function: ease-in;
 }
+
+/* dancer2 */
+
+.dancer2 {
+  width: 50px;
+  height: 50px;
+  margin-top: 12.5px;
+  margin-left: 12.5px;
+  position: relative;
+  border: 1px solid rgba(0,0,0,0);
+  transform: rotate(0deg);
+}
+.dot {
+  opacity: 0;
+  width: 10px;
+  height: 10px;
+  margin-top: -12.5px;
+  margin-left: -12.5px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform-origin: center center;
+  transition: top 0.6s 1.2s, left 0.6s 1.2s, opacity 1s 0s;
+}
+.dot:after {
+  content: '';
+  display: block;
+  width: 100%;
+  height: 100%;
+  background-color: red;
+  border-radius: 50%;
+  position: absolute;
+  z-index: 1;
+}
+.dot:before {
+  content: '';
+  display: block;
+  width: 100%;
+  height: 100%;
+  border: 1px solid #000;
+  border-radius: 50%;
+  position: absolute;
+  transform: skew(-80deg, 15deg);
+  visibility: hidden;
+}
+.animate.dancer2 {
+  animation-name: t1;
+  animation-duration: 8s;
+  animation-delay: 1s;
+  animation-direction: alternate;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+}
+.animate .dot {
+  opacity: 1;
+  filter: none;
+  animation-delay: 1s;
+  animation-duration: 1s;
+  animation-direction: alternate;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+  transition: top 0.6s 1.2s, left 0.6s 1.2s, opacity 1s 0s;
+}
+.animate .dot:nth-child(1) {
+  animation-name: d1;
+  top: 0;
+  left: 50%;
+}
+.animate .dot:nth-child(2) {
+  animation-name: d2;
+  top: 100%;
+  left: 0;
+}
+.animate .dot:nth-child(3) {
+  animation-name: d3;
+  top: 100%;
+  left: 100%;
+}
+.animate .dot:before {
+  animation-name: orbits;
+  animation-duration: 2s;
+  animation-direction: alternate;
+  animation-iteration-count: infinite;
+}
+
+@keyframes orbits {
+  0% {
+    transform: skew(20deg, 50deg);
+  }
+  100% {
+    transform: skew(-20deg, -50deg);
+  }
+}
+@keyframes d1 {
+  0% {
+    top: 0;
+    left: 50%;
+  }
+  100% {
+    top: 100%;
+  }
+}
+@keyframes d2 {
+  0% {
+    top: 100%;
+    left: 0;
+  }
+  100% {
+    top: 0;
+    left: 100%;
+  }
+}
+@keyframes d3 {
+  0% {
+    top: 100%;
+    left: 100%;
+  }
+  100% {
+    top: 0;
+    left: 0;
+  }
+}
+@keyframes t1 {
+  0% {
+    transform: rotate(0deg);
+  }
+  10% {
+    transform: rotate(0deg);
+  }
+  15% {
+    transform: rotate(90deg);
+  }
+  35% {
+    transform: rotate(90deg);
+  }
+  40% {
+    transform: rotate(180deg);
+  }
+  55% {
+    transform: rotate(180deg);
+  }
+  60% {
+    transform: rotate(270deg);
+  }
+  85% {
+    transform: rotate(270deg);
+  }
+  90% {
+    transform: rotate(360deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
